# grains_sim

./: ArgParser.h  CMakeLists.txt  Program.cpp  Program.h  README.md  main.cpp
cells/: Cell.cpp  Cell.h
enums/: DimensionType.h  FileType.h  MethodType.h  NeighbourhoodType.h
gui/: charts.py  controller.py  defines.py  main.py  reader.py  runner.py  window.py
io_handlers/: Reader.h  Writer.h
io_handlers/CFG/: Config.cpp  Config.h
io_handlers/CSV/: CSVWriter.cpp  CSVWriter.h
io_handlers/TXT/: Stats.cpp  Stats.h
methods/: Method.h
methods/cellular_automata/: CA.cpp  CA.h
methods/monte_carlo/: MC.cpp  MC.h
neighbourhoods/: Neighbourhood.h  help_funcs.h
neighbourhoods/moore/: MooreNeighbourhood.cpp  MooreNeighbourhood.h
neighbourhoods/neumann/: NeumannNeighbourhood.cpp  NeumannNeighbourhood.h
spaces/: Space.h
spaces/2D/: Space2D.cpp  Space2D.h
spaces/3D/: Space3D.cpp  Space3D.h
time_logger/: Logger.cpp  Logger.h
